# distributed-dl

./: .gitignore  CMakeLists.txt  README.md  flake.nix
app/: app.py
pytorch-playground/: resnet.cpp
pytorch_playground/: example_app.cpp  example_app.h
scripts/: distributed_train.py  train.py
src/: distributed.hpp  main.cpp  nccl_distr.cuh  serializedtensor.hpp
src/debugger/: debugger.py  test.cpp
src/examples/: allreduce.cpp  basic_communication.cpp  gather.cpp  nccl_test.cpp  reduce.cpp  resnet-cuda.cpp  resnet-with-model-trainer.cpp  resnet.cpp  scatter.cpp
src/examples/mpi/: basic_communication.cpp  resnet.cpp
src/examples/nccl/: allreduce.cpp  basic_communication.cpp  gather.cpp  reduce.cpp  scatter.cpp
src/mpi_wrapper/: SerializedTensor.hpp  distributed_funcs.cpp  mpi_send_tensor.cpp  mpi_send_tensor.hpp
test/: CMakeLists.txt  gather_test.cpp  scatter_test.cpp
torch_playground/: distributed_methods.py
